Gesture updates and misc fixups

--- a/include/config/auto.conf
+++ b/include/config/auto.conf
@@ -713,6 +713,7 @@ CONFIG_FB_MSM_MIPI_DSI=y
 CONFIG_NF_CONNTRACK_MARK=y
 CONFIG_NETFILTER=y
 CONFIG_NETFILTER_XT_MATCH_HASHLIMIT=y
+CONFIG_AS0260=y
 CONFIG_NET_VENDOR_SMSC=y
 CONFIG_USE_GENERIC_SMP_HELPERS=y
 CONFIG_SERIO_SERPORT=y
@@ -798,7 +799,7 @@ CONFIG_MSM_CAMERA=y
 CONFIG_DEBUG_KERNEL=y
 CONFIG_COMPAT_BRK=y
 CONFIG_MSM_SMD0_WQ=y
-CONFIG_LOCALVERSION="-NuK3rn3L-KK-m7vzw_S6_v10"
+CONFIG_LOCALVERSION="-NuK3rn3L-KK-m7vzw_S6_v13-DC-test"
 CONFIG_RADIO_ADAPTERS=y
 CONFIG_TI201_ACT=y
 CONFIG_KERNEL_PMEM_EBI_REGION=y
@@ -1202,6 +1203,7 @@ CONFIG_USB_SERIAL_WWAN=y
 CONFIG_MSM_IDLE_STATS_BUCKET_SHIFT=2
 CONFIG_FB_MSM_MIPI_DSI_TC358764_DSI2LVDS=y
 CONFIG_VIDEO_V4L2_COMMON=y
+CONFIG_CPU_FREQ_GOV_LIONHEART=y
 CONFIG_CRYPTO_BLKCIPHER=y
 CONFIG_MSM_GPIOMUX=y
 CONFIG_MFD_PM8XXX_DEBUG=y
