--- a/include/config/tristate.conf
+++ b/include/config/tristate.conf
@@ -472,6 +472,7 @@ CONFIG_BITREVERSE=Y
 CONFIG_MSM_ROTATOR=Y
 CONFIG_USB_SERIAL_WWAN=Y
 CONFIG_VIDEO_V4L2_COMMON=Y
+CONFIG_CPU_FREQ_GOV_LIONHEART=Y
 CONFIG_CRYPTO_BLKCIPHER=Y
 CONFIG_MFD_PM8XXX_DEBUG=Y
 CONFIG_USB_STORAGE_ONETOUCH=Y
