--- a/arch/arm/configs/nu_defconfig
+++ b/arch/arm/configs/nu_defconfig
@@ -36,7 +36,7 @@ CONFIG_IRQ_WORK=y
 CONFIG_EXPERIMENTAL=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION="-NuK3rn3L-KK-m7vzw_S6_v10"
+CONFIG_LOCALVERSION="-NuK3rn3L-KK-m7vzw_S6_v12"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
@@ -146,7 +146,7 @@ CONFIG_SLUB=y
 # CONFIG_SLOB is not set
 # CONFIG_PROFILING is not set
 CONFIG_TRACEPOINTS=y
-# CONFIG_HAVE_OPROFILE is not set
+CONFIG_HAVE_OPROFILE=y
 # CONFIG_KPROBES is not set
 # CONFIG_JUMP_LABEL is not set
 CONFIG_HAVE_KPROBES=y
@@ -513,6 +513,7 @@ CONFIG_MSM_HSIC_SYSMON=y
 CONFIG_MACH_M7_UL=y
 # CONFIG_MACH_M7_U is not set
 # CONFIG_MACH_M7_WLV is not set
+CONFIG_SUPPORT_USB_SPEAKER=y
 
 #
 # System MMU
@@ -2399,6 +2400,7 @@ CONFIG_QUP_EXCLUSIVE_TO_CAMERA=y
 # CONFIG_IMX175 is not set
 CONFIG_IMX135=y
 # CONFIG_OV8838 is not set
+CONFIG_AS0260=y
 CONFIG_VD6869=y
 CONFIG_OV4688=y
 # CONFIG_IMX175_ACT is not set
